2007-10-06  Hans Breuer  <hans@breuer.org>

	* lib/arrows.c : major restructuring - getting calculate and draw by
	function pointer. A lot of arrows are converted to the new style thus
	arrow_bbox() can give the correct bounding box.
	* objects/standard/arc.c : bug #340705 and bug #477569
	  objects/standard/bezier.c : bug #300055 
	  objects/standard/line.c objects/standard/polyline.c 
	  objects/standard/zigzagline.c : not using *BBExtra to adjust the 
	bounding box for arrows but instead a combination of arrow_bbox()
	and calculate_arrow_point() 
	* lib/bounding_box.c : just a comment for now
	* samples/arrows.dia : more coverage

2007-10-06  Hans Breuer  <hans@breuer.org>

	* makefile.msc bindings/makefile.msc : integrated bindings in the build

	* configure.in acinclude.m4 Makefile.am bindings/Makefile.am : 
	build bindings given --with-swig (and SWIG is found)
	* bindings/dia-diagramdata.h bindings/dia-extra.cpp 
	  bindings/dia-properties.cpp bindings/dia-diagramdata.cpp
	  bindings/dia-properties.h bindings/dia-python-extra.h 
	  bindings/dia.swig : first time built with g++
	* bindings/test.py : some adaptions to run on Linux, not
	complete yet but something works;)

	* lib/utils.[ch] : removed superfluous definition of snprintf()
	which did not work from C++ and isn't needed anymore. Use g_snprintf().

	* lib/newgroup.c : remove the circular dependency to app, it does 
	not work on win32 and even Linuix has problems when app is not used,
	e.g. by providing bindings only for libdia

2007-09-30  Lars Clausen  <lars@raeder.dk>

	* app/undo.[ch]: Slight work on moving objects between layers.

	* app/modify_tool.c: 
	* app/disp_callbacks.c: 
	* app/textedit.[ch]: First stab at separate edit mode: Introduce
	"textedit_mode" check and entering/exiting text edit mode.  Make
	keyboard input understand textedit and switch in and out.  Don't
	automatically enter text edit mode on selection, only on creation.

2007-09-25  Lars Clausen  <lars@raeder.dk>
